infrus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: edgex-nginx-ingress
  # annotations:
  #   ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /ui(/|$)(.*)
            pathType: Prefix
            backend:
                  service:
                      name: edgex-ui-go
                      port:
                        number: 4000
<<<<<<< HEAD
          - path: /core(/|$)(.*)
            pathType: Prefix
            backend:
                  service:
                      name: edgex-device-modbus
                      port:
                        number: 59901
=======
>>>>>>> Group templates with edgex layers
